--- a/book-service.html
+++ b/book-service.html
@@ -114,9 +114,14 @@
             <label for="service">Service Type*</label>
             <select id="service" name="service" required>
               <option value="">-- Please choose an option --</option>
-              <option value="domestic">Domestic Cleaning</option>
-              <option value="commercial">Commercial Property Cleaning</option>
-              <option value="laundry">Laundry Service</option>
+              <option value="residential">Residential Cleaning</option>
+              <option value="office">Office Cleaning</option>
+              <option value="post-construction">
+                Post-Construction Cleaning
+              </option>
+              <option value="move-in">Move-in Cleaning</option>
+              <option value="after-party">After Party Cleaning</option>
+              <option value="laundry">Laundry Services</option>
             </select>
           </div>
         </div>
@@ -132,6 +137,7 @@
               <option value="">-- Please choose an option --</option>
               <option value="one-time">One time</option>
               <option value="weekly">Weekly</option>
+              <option value="weekly">Bi-Weekly</option>
               <option value="monthly">Monthly</option>
               <option value="other">Other</option>
             </select>
@@ -180,6 +186,13 @@
                 rel="noopener"
               >
                 <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@jayoni.cleaning.s?_t=ZS-8zBz0zIyAWA&_r=1"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fa-brands fa-tiktok"></i>
               </a>
             </div>
           </div>
