--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,30 @@
 
         <h3>Location/Service Area</h3>
         <p>Benin City, Edo State</p>
+
+        <div class="contact-icons">
+          <a
+            href="https://www.facebook.com/share/1B5ZBLmwFu/"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/jayoni_cleaning_services?igsh=cW56czR2MjdmMDA0"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.tiktok.com/@jayoni.cleaning.s?_t=ZS-8zBz0zIyAWA&_r=1"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="fa-brands fa-tiktok"></i>
+          </a>
+        </div>
       </div>
     </section>
 
@@ -166,6 +190,13 @@
                 rel="noopener"
               >
                 <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@jayoni.cleaning.s?_t=ZS-8zBz0zIyAWA&_r=1"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fa-brands fa-tiktok"></i>
               </a>
             </div>
           </div>
