--- a/index.html
+++ b/index.html
@@ -72,23 +72,26 @@
     </section>
 
     <section class="welcome-section">
-      <div class="welcome-text">
-        <h2>Welcome to Jayoni Cleaning Services</h2>
-        <p>
-          Jayoni cleaning services is a CAC-registered company dedicated to
-          providing top-notch cleaning in Benin City. We are detailed oriented,
-          open to client feedback and committed to ensuring every home and
-          office shines-because a clean home is a happy home.
-        </p>
-        <a href="/pages/book-personal.html"
-          ><button class="welcome-button">VIEW GALLERY</button></a
-        >
+      <h2 class="mobile">Welcome to Jayoni Cleaning Services</h2>
+      <div class="welcome-flex">
+        <div class="welcome-text">
+          <h2 class="desktop">Welcome to Jayoni Cleaning Services</h2>
+          <p>
+            Jayoni cleaning services is a CAC-registered company dedicated to
+            providing top-notch cleaning in Benin City. We are detailed
+            oriented, open to client feedback and committed to ensuring every
+            home and office shines-because a clean home is a happy home.
+          </p>
+          <a href="/pages/book-personal.html"
+            ><button class="welcome-button">VIEW GALLERY</button></a
+          >
+        </div>
+        <img
+          src="images/welcome-img.jpg"
+          alt="Cleaning Team"
+          class="welcome-img"
+        />
       </div>
-      <img
-        src="images/welcome-img.jpg"
-        alt="Cleaning Team"
-        class="welcome-img"
-      />
     </section>
 
     <section class="services">
@@ -310,6 +313,13 @@
                 rel="noopener"
               >
                 <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@jayoni.cleaning.s?_t=ZS-8zBz0zIyAWA&_r=1"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fa-brands fa-tiktok"></i>
               </a>
             </div>
           </div>
