--- a/privacy.html
+++ b/privacy.html
@@ -142,6 +142,13 @@
               >
                 <i class="fab fa-instagram"></i>
               </a>
+              <a
+                href="https://www.tiktok.com/@jayoni.cleaning.s?_t=ZS-8zBz0zIyAWA&_r=1"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fa-brands fa-tiktok"></i>
+              </a>
             </div>
           </div>
           <div class="footer-center">
