--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             oriented, open to client feedback and committed to ensuring every
             home and office shines-because a clean home is a happy home.
           </p>
-          <a href="/pages/book-personal.html"
+          <a href="gallery.html"
             ><button class="welcome-button">VIEW GALLERY</button></a
           >
         </div>
@@ -134,7 +134,7 @@
         </div>
         <div class="service-box">
           <img
-            src="images/residential.jpg"
+            src="images/move-in.png"
             alt="Services image"
             class="services-img"
           />
@@ -143,7 +143,7 @@
         </div>
         <div class="service-box">
           <img
-            src="images/residential.jpg"
+            src="images/after-party.png"
             alt="Services image"
             class="services-img"
           />
@@ -152,7 +152,7 @@
         </div>
         <div class="service-box">
           <img
-            src="images/residential.jpg"
+            src="images/laundry-service.png"
             alt="Services image"
             class="services-img"
           />
@@ -182,52 +182,38 @@
         <div class="testimonial-box">
           <i class="fa-solid fa-quote-right"></i>
           <p>
-            “ I commend Jayoni cleaning services for their exceptional work at
-            our facility. Over the course of or engagement, their team has
-            consistently demonstrated professionalism, efficiency, and a
-            commitment to excellence that far exceeds expectations ”
+            “ One thing I really value about Jayoni is consistency. Once an
+            appointment is booked, she never cancels or postpones. She has a
+            team of professional cleaners who are always ready to serve, and
+            they do an excellent job every time. The staff are trustworthy and
+            reliable, even when Joyce or I are not around. I highly recommend
+            their services ”
           </p>
-          <h3>-Mrs Ada</h3>
+          <h3>-Mr Emeka</h3>
         </div>
         <div class="testimonial-box">
           <i class="fa-solid fa-quote-right"></i>
           <p>
-            “ Jayoni cleaning services took care of our pest problem in no time!
-            The team was polite, quick, and left our home fresh and bug-free. I
-            can finally sleep without worrying-highly recommend! ”
+            “ We had just finished our building project and needed a deep clean.
+            Jayoni Cleaning Services came through and did an amazing job.
+            Everything was spotless, and the work was done so effortlessly. I
+            was really impressed and happy with the result. Definitely
+            recommend! ”
           </p>
-          <h3>-Operations Manager</h3>
-          <p>Kada Plaza</p>
+          <h3>-Mr Ken</h3>
+          <p>S&T Pharmacy & Stores</p>
         </div>
         <div class="testimonial-box">
           <i class="fa-solid fa-quote-right"></i>
           <p>
-            “ I commend Jayoni cleaning services for their exceptional work at
-            our facility. Over the course of or engagement, their team has
-            consistently demonstrated professionalism, efficiency, and a
-            commitment to excellence that far exceeds expectations ”
+            “ I’ve been using Jayoni Cleaning Services once a month, and I’m
+            always impressed. The first time, I was pleasantly surprised when
+            even my dishes were done without me asking. Every visit leaves my
+            home fresh, spotless, and perfectly organized. I truly appreciate
+            the attention to detail and the extra effort put into making my
+            space shine. Highly recommended! ”
           </p>
-          <h3>-Mrs Ada</h3>
-        </div>
-        <div class="testimonial-box">
-          <i class="fa-solid fa-quote-right"></i>
-          <p>
-            “ I commend Jayoni cleaning services for their exceptional work at
-            our facility. Over the course of or engagement, their team has
-            consistently demonstrated professionalism, efficiency, and a
-            commitment to excellence that far exceeds expectations ”
-          </p>
-          <h3>-Mrs Ada</h3>
-        </div>
-        <div class="testimonial-box">
-          <i class="fa-solid fa-quote-right"></i>
-          <p>
-            “ I commend Jayoni cleaning services for their exceptional work at
-            our facility. Over the course of or engagement, their team has
-            consistently demonstrated professionalism, efficiency, and a
-            commitment to excellence that far exceeds expectations ”
-          </p>
-          <h3>-Mrs Ada</h3>
+          <h3>-Mrs Grace</h3>
         </div>
       </div>
     </section>
@@ -281,14 +267,16 @@
       <details>
         <summary>What’s included in a standard cleaning?</summary>
         <p>
-          Base / standard Cleaning: Removal of cobwebs, sweeping and mopping,
-          washing the toilet, doing dishes, and cleaning surfaces.<br />Deep
-          Cleaning: Includes everything in base cleaning plus cleaning of
-          windows, doors, kitchen cabinets, fridge, beneath the bed, shoe rack,
-          fans, and more. We literally take care of every nook and cranny of
-          your space.<br />Move-in Cleaning: Focused on windows, doors,
-          sweeping, mopping, and surface cleaning—making your new place fresh
-          and ready.
+          <strong>Base / standard Cleaning:</strong> Removal of cobwebs,
+          sweeping and mopping, washing the toilet, doing dishes, and cleaning
+          surfaces.<br /><strong>Deep Cleaning:</strong> Includes everything in
+          base cleaning plus cleaning of windows, doors, kitchen cabinets,
+          fridge, beneath the bed, shoe rack, fans, and more. We literally take
+          care of every nook and cranny of your space.<br /><strong
+            >Move-in Cleaning:</strong
+          >
+          Focused on windows, doors, sweeping, mopping, and surface
+          cleaning—making your new place fresh and ready.
         </p>
       </details>
     </section>
