--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT US</a></li>
         <li><a href="book-service.html">BOOK A SERVICE</a></li>
-        <li><a href="#contact">CONTACT US</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
       </ul>
     </nav>
 
